Alignement  et correction responsive de 'Nos services' et centrage responsive titre

--- a/style.css
+++ b/style.css
@@ -179,7 +179,6 @@ header a:hover {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-items: center;
     margin: 40px;
 }
 
@@ -256,7 +255,7 @@ footer {
 @media screen and (max-width: 1200px) {
 
     .boutton {
-        font-size: 1em;
+        font-size: 1.5em;
     }
 
     #accueil h1 {
@@ -264,8 +263,7 @@ footer {
     }
 
     #titre {
-        margin-left: 20px;
-        margin-right: 20px;
+        margin: auto;
     }
 
     .plats {
@@ -280,6 +278,16 @@ footer {
         margin-bottom: 30px;
     }
 
+    #services img {
+        width: 300px;
+        height: 250px;
+    }
+
+    .presentation div {
+        width: 300px;
+        height: 250px;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -288,29 +296,9 @@ footer {
         font-size: 1em;
     }
 
-    #accueil h1 {
-        font-size: 3em;
-    }
-
     nav {
         display: flex;
         flex-wrap: wrap;
-    }
-
-    #titre {
-        margin: auto;
-    }
-
-    #services img {
-        width: 200px;
-        height: 150px;
-    }
-
-    .presentation div {
-        width: 200px;
-        height: 150px;
-        margin-left: 30px;
-        margin-right: 30px;
     }
 
     #content {
@@ -321,12 +309,18 @@ footer {
         margin: 30px 0 0 0;
     }
 
+    #services img {
+        width: 200px;
+        height: 150px;
+    }
+
+    .presentation div {
+        width: 200px;
+        height: 150px;
+    }
+
 }
 
 @media screen and (max-width: 576px) {
-
-    .plats {
-        flex-wrap: wrap;
-    }
 
 }
